[project]
name = "krishi-mitra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "easyocr>=1.7.2",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langgraph-cli[inmem]>=0.4.29",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
